# thebeat-server

./: .dockerignore  .env.example  .gitignore  Dockerfile
.github/workflows/: build.yaml
backend/: .gitignore  Cargo.toml  Rocket.toml  static
backend/src/: error.rs  expiring.rs  hr.rs  main.rs  messages.rs
benchmark/: README.md  drill.yml
frontend-js/: get.js  index.html
scripts/: build-and-push.sh
