[package]
name = "thebeat-server"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
parking_lot = { version = "0.12.1", features = ["arc_lock"] }
rocket = { version = "0.5.0", features = ["json", "serde_json", "uuid", "uuid_"] }
rocket_cors = "0.6.0"
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
